--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,4 @@
+<button class="btn btn-primary" [disabled]="!allowNewSever">Add Server</button>
+<p [innerText]="allowNewSever"></p>
 <app-server></app-server>
 <app-server></app-server>
